--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,36 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div class="container-fluid">
+<h2>User Form</h2>
+
+<form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
+	<div class="form-group">
+		<label>Name</label>
+		<input type="text" class="form-control" name="name" ngModel/>
+	</div>
+	<div class="form-group">
+		<label>Email</label>
+		<input type="text" class="form-control" name="email" ngModel/>
+	</div>
+	<div ngModelGroup="address">
+		<div class="form-group">
+			<label>Street</label>
+			<input type="text" class="form-control" name="street" ngModel/>
+		</div>
+		<div class="form-group">
+			<label>City</label>
+			<input type="text" class="form-control" name="city" ngModel/>
+		</div>
+		<div class="form-group">
+			<label>Postal Code</label>
+			<input type="text" class="form-control" name="postalCode" ngModel/>
+		</div>
+	</div>
+	<button type="submit" class="btn btn-primary">Submit</button>
+	<div>
+		  <p name="result">{{resultName | json}}</p>
+	</div>
+</form>
+
 <div style="text-align:center">
   <h1>
     Welcome to {{title}}!
@@ -17,4 +49,4 @@
     <h2><a target="_blank" href="https://blog.angular.io//">Angular blog</a></h2>
   </li>
 </ul>
-
+</div>
